# dao_records

./: README.md  pyproject.toml
contracts/: IRecord.sol  ISmartContact.sol  Record.sol  SmartContact.sol
tests/: test_main.py
